test/src/e2e_vm_tests/test_programs/should_fail/recover_path_pattern_matching/src/main.sw
contract;

enum Enum {
    C1 : (),
}

fn recover_on_path(e: Enum) -> Enum {
    match e {
        Enum:: => return e,
    }
}

fn recovery_witness() -> bool { 0 }
